--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,9 @@
 ---
 # defaults file for ansible-dnsmasq
+config_dnsmasq: false  #defines if DNSMASQ should be configured
+dnsmasq_misc_backup_dir: []
+dnsmasq_misc_home: []
+enable_dnsmasq_dhcp: false  #defines if DHCP services are provided by DNSMASQ
+enable_dnsmasq_dhcp_tftp: false  #defines if DHCP and TFTP services are provided by DNSMASQ
+enable_tftp: false  #defines if TFTP services are provided by DNSMASQ
+sync_dnsmasq: false  #defines if DNSMASQ is synced between nodes when using GlusterFS
