cleaning up vars

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -82,7 +82,7 @@ galaxy_info:
   #  - maverick
   #  - natty
   #  - oneiric
-    - precise
+  #  - precise
   #  - quantal
   #  - raring
   #  - saucy
