--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,5 +7,6 @@
   when: ansible_os_family == "RedHat"
 
 - include: config_dnsmasq.yml
-  tags: [config_dnsmasq]
+  tags:
+    - config_dnsmasq
   when: config_dnsmasq
