Added openSUSE support
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.coml>

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,9 @@
 - include: redhat.yml
   when: ansible_os_family == "RedHat"
 
+- include: opensuse.yml
+  when: ansible_os_family == "openSUSE Leap"
+  
 - include: config_dnsmasq.yml
   tags:
     - config_dnsmasq
