--- a/playbook.yml
+++ b/playbook.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: true
   vars:
-    - config_dnsmasq: true
+    - dnsmasq_config: true
   roles:
     - role: ansible-dnsmasq
   tasks:
