Complete rewrite of configuration options
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.com>

--- a/tasks/config_dnsmasq.yml
+++ b/tasks/config_dnsmasq.yml
@@ -1,17 +1,17 @@
 ---
-- name: dnsmasq_config | configuring dnsmasq
+- name: dnsmasq_config | Configuring DNSMasq
   template:
-    src: etc/dnsmasq.conf.j2
-    dest: /etc/dnsmasq.conf
-    owner: root
-    group: root
+    src: "etc/dnsmasq.conf.j2"
+    dest: "/etc/dnsmasq.conf"
+    owner: "root"
+    group: "root"
     mode: 0644
-  notify: restart dnsmasq
+  notify: "restart dnsmasq"
 
-- name: dnsmasq_config | creating dnsmasq_tftpboot_dir
+- name: dnsmasq_config | Ensuring {{ dnsmasq_tftpboot_dir }} Exists
   file:
     path: "{{ dnsmasq_tftpboot_dir }}"
-    state: directory
+    state: "directory"
   when: >
-        (dnsmasq_enable_tftp is defined and dnsmasq_enable_tftp) or
-        (dnsmasq_enable_dhcp_tftp is defined and dnsmasq_enable_dhcp_tftp)
+        (dnsmasq_enable_tftp is defined and
+        dnsmasq_enable_tftp)
