--- a/tasks/opensuse.yml
+++ b/tasks/opensuse.yml
@@ -1,11 +1,11 @@
 ---
-- name: opensuse | installing dnsmasq
+- name: opensuse | Installing DNSMasq
   zypper:
     name: "dnsmasq"
-    state: present
+    state: "present"
 
-- name: opensuse | enabling on boot and started
+- name: opensuse | Ensuring DNSMasq Service Is Enabled and Started
   service:
-    name: dnsmasq
-    state: started
+    name: "dnsmasq"
+    state: "started"
     enabled: yes
