Updated Galaxy info
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.com>

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -47,15 +47,15 @@ galaxy_info:
   #  versions:
   #  - all
   #  - any
-  - name: opensuse
-    versions:
+  # - name: opensuse
+  #   versions:
   #  - all
   #  - 12.1
   #  - 12.2
   #  - 12.3
   #  - 13.1
   #  - 13.2
-    - 42.1
+    # - 42.1
   #- name: Amazon
   #  versions:
   #  - all
