Added become: true on required tasks and updated Travis tests
Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.com>

--- a/tasks/config_dnsmasq.yml
+++ b/tasks/config_dnsmasq.yml
@@ -7,11 +7,13 @@
     group: "root"
     mode: 0644
   notify: "restart dnsmasq"
+  become: true
 
 - name: dnsmasq_config | Ensuring {{ dnsmasq_tftpboot_dir }} Exists
   file:
     path: "{{ dnsmasq_tftpboot_dir }}"
     state: "directory"
+  become: true
   when: >
         (dnsmasq_enable_tftp is defined and
         dnsmasq_enable_tftp)
