--- a/tasks/opensuse.yml
+++ b/tasks/opensuse.yml
@@ -3,9 +3,11 @@
   zypper:
     name: "dnsmasq"
     state: "present"
+  become: true
 
 - name: opensuse | Ensuring DNSMasq Service Is Enabled and Started
   service:
     name: "dnsmasq"
     state: "started"
     enabled: yes
+  become: true
