--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,9 @@
 ---
 # defaults file for ansible-dnsmasq
 
-dnsmasq_bind_interfaces: [] # Define specific interfaces to listen on
-  # - '{{ ansible_default_ipv4.interface }}'
+# Define specific interfaces to listen on
+dnsmasq_bind_interfaces: []
+  # - "{{ ansible_default_ipv4['interface'] }}"
   # - 'eth0'
   # - 'eth1'
 
@@ -11,7 +12,7 @@ dnsmasq_bind_listen_only_interfaces: false
 
 # Define specific domain forwarders
 dnsmasq_conditional_forwarders: []
-  # - address: '172.16.24.1'
+  # - address: 172.16.24.1
   #   domain: 'etsbv.internal'
 
 # Defines if DNSMASQ should be configured
@@ -27,7 +28,7 @@ dnsmasq_dhcp_boot: 'pxelinux.0,{{ inventory_hostname }},{{ dnsmasq_pri_bind_addr
 
 # Define static ip reservations
 dnsmasq_dhcp_host_reservations: []
-  # - address: '192.168.0.60'
+  # - address: 192.168.0.60
   #   lease_time: '1h'
   #   mac_address:
   #     - '11:22:33:44:55:66' # Multiple MAC addresses may be assigned
@@ -38,8 +39,8 @@ dnsmasq_dhcp_host_reservations: []
 dnsmasq_dhcp_options:
   - option: 'dns-server'
     value:
-      - '192.168.202.200'
-      - '192.168.202.201'
+      - 192.168.202.200
+      - 192.168.202.201
   # - option: 'domain-name'
   #   value:
   #     - 'another.{{ dnsmasq_pri_domain_name }}'
@@ -50,22 +51,22 @@ dnsmasq_dhcp_options:
       - 'test.{{ dnsmasq_pri_domain_name }}'
   - option: 'ntp-server'
     value:
-      - '192.168.202.200'
-      - '192.168.202.201'
+      - 192.168.202.200
+      - 192.168.202.201
   - option: 'router'
     value:
-      - '192.168.202.1'
+      - 192.168.202.1
 
 # Define dhcp scopes to be used if dhcp is enabled
 dnsmasq_dhcp_scopes:
-  - start: '192.168.1.128'
-    end: '192.168.1.224'
-    netmask: '255.255.255.0'
+  - start: 192.168.1.128
+    end: 192.168.1.224
+    netmask: 255.255.255.0
     # lease_time: '24h' # Define a specific lease time if desired..Default is 1h
     # interface: 'eth0' # Define a specific interface to provide scope...not required but useful
-  # - start: '192.168.2.128'
-  #   end: '192.168.2.224'
-  #   netmask: '255.255.255.0'
+  # - start: 192.168.2.128
+  #   end: 192.168.2.224
+  #   netmask: 255.255.255.0
   #   lease_time: '24h'
   #   interface: 'eth1'
 
@@ -91,21 +92,21 @@ dnsmasq_forward_nonrouted_addresses: false
 # Define listen port for DNS
 # Default=53
 # Set to 0 to disable DNS
-dnsmasq_listen_port: '53'
+dnsmasq_listen_port: 53
 
 # Define your dns servers
 dnsmasq_nameservers:
-  - '8.8.4.4'
-  - '8.8.8.8'
+  - 8.8.4.4
+  - 8.8.8.8
 
-dnsmasq_pri_bind_address: '{{ ansible_default_ipv4.address }}'
+dnsmasq_pri_bind_address: "{{ ansible_default_ipv4['address'] }}"
 dnsmasq_pri_domain_name: 'example.org'
 
 # Defines netmask cidr value
 # 255.255.255.0 == 24
-dnsmasq_pri_netmask_cidr: '24'
+dnsmasq_pri_netmask_cidr: 24
 
-dnsmasq_pri_network: '{{ ansible_default_ipv4.network }}'
+dnsmasq_pri_network: "{{ ansible_default_ipv4['network'] }}"
 
 # Defines if you want dnsmasq to read /etc/hosts
 dnsmasq_read_etc_hosts: true
@@ -118,7 +119,7 @@ dnsmasq_read_etc_resolv_conf: true
 
 # Define static addresses
 dnsmasq_static_addresses: []
-  # - address: '192.168.202.133'
+  # - address: 192.168.202.133
   #   name: 'node1.test.com'
 
 # Define tftpboot directory
