Cleaned up task formatting

--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,6 +1,6 @@
 ---
-- name: debian | Installing DNSMasq
+- name:    debian | Installing DNSMasq
   apt:
-    name: "dnsmasq"
-    state: "present"
-  become: true
+    name:  dnsmasq
+    state: present
+  become:  true
