--- a/tasks/alpine.yml
+++ b/tasks/alpine.yml
@@ -1,6 +1,6 @@
 ---
-- name: alpine | Installing DNSMasq
+- name:    alpine | Installing DNSMasq
   apk:
-    name: "dnsmasq"
-    state: "present"
-  become: true
+    name:  dnsmasq
+    state: present
+  become:  true
