Fixed install on systems running systemd-resolved
On newer distros that have systemd-resolved installed by default,
DNSMasq does not appear to be functional after installing. This resolves
that issue and ensures that DNSMasq is functional.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,3 +16,8 @@
   tags:
     - dnsmasq_config
   when: dnsmasq_config
+
+- include: systemd_resolved.yml
+  when: >
+        ansible_service_mgr == "systemd" and
+        dnsmasq_systemd_resolved_disable
