--- a/tasks/alpine.yml
+++ b/tasks/alpine.yml
@@ -1,6 +1,8 @@
 ---
-- name:    alpine | Installing DNSMasq
+- name: alpine | Installing DNSMasq
   apk:
-    name:  dnsmasq
+    name: dnsmasq
     state: present
-  become:  true
+  become: true
+  register: result
+  until: result is successful
