--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -1,21 +1,25 @@
 ---
-- name:      redhat | Installing DNSMasq
+- name: redhat | Installing DNSMasq
   yum:
-    name:    dnsmasq
-    state:   present
-  become:    true
-  when:      ansible_distribution != "Fedora"
+    name: dnsmasq
+    state: present
+  become: true
+  register: result
+  until: result is successful
+  when: ansible_distribution != "Fedora"
 
-- name:      redhat | Installing DNSMasq
+- name: redhat | Installing DNSMasq
   dnf:
-    name:    dnsmasq
-    state:   present
-  become:    true
-  when:      ansible_distribution == "Fedora"
+    name: dnsmasq
+    state: present
+  become: true
+  register: result
+  until: result is successful
+  when: ansible_distribution == "Fedora"
 
-- name:      redhat | Ensuring DNSMasq Service is Enabled and Started
+- name: redhat | Ensuring DNSMasq Service is Enabled and Started
   service:
-    name:    dnsmasq
-    state:   started
+    name: dnsmasq
+    state: started
     enabled: true
-  become:    true
+  become: true
