--- a/tests/Dockerfile.debian-jessie
+++ b/tests/Dockerfile.debian-jessie
@@ -1,8 +1,14 @@
 FROM debian:jessie
+ENV container=docker
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends build-essential libffi-dev \
     libssl-dev python-dev python-minimal python-pip python-setuptools \
-    python-virtualenv
+    python-virtualenv && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN pip install --upgrade setuptools wheel && pip install ansible
+RUN pip install --upgrade pip setuptools && \
+    pip install enum34 ipaddress wheel && \
+    pip install ansible ansible-lint
+
+COPY .ansible-lint /
