--- a/tests/Dockerfile.debian-stretch
+++ b/tests/Dockerfile.debian-stretch
@@ -1,8 +1,13 @@
 FROM debian:stretch
+ENV container=docker
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends build-essential libffi-dev \
     libssl-dev python-dev python-minimal python-pip python-setuptools \
-    python-virtualenv systemd
+    python-virtualenv systemd && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN pip install --upgrade setuptools wheel && pip install ansible
+RUN pip install enum34 ipaddress wheel && \
+    pip install ansible ansible-lint
+
+COPY .ansible-lint /
