--- a/tests/Dockerfile.ubuntu-xenial
+++ b/tests/Dockerfile.ubuntu-xenial
@@ -1,8 +1,13 @@
 FROM ubuntu:xenial
+ENV container=docker
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends build-essential libffi-dev \
     libssl-dev python-dev python-minimal python-pip python-setuptools \
-    python-virtualenv
+    python-virtualenv && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN pip install ansible
+RUN pip install enum34 ipaddress wheel && \
+    pip install ansible ansible-lint
+
+COPY .ansible-lint /
