--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -16,6 +16,8 @@ platforms:
     image: centos:7
     command: /sbin/init
     privileged: true
+    capabilities:
+      - NET_ADMIN
     tmpfs:
       - /run
       - /tmp
