--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-*.retry
-.vagrant/
-ubuntu-yakkety-16.10-cloudimg-console.log
-ubuntu-xenial-16.04-cloudimg-console.log
-ubuntu-zesty-17.04-cloudimg-console.log
+venv/
