--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,9 @@
 ---
 galaxy_info:
   author: Larry Smith Jr.
-  description: An [Ansible] role to install/configure [DNSMasq]
-
+  description: Ansible role to install/configure DNSMasq
   license: MIT
-  min_ansible_version: 1.2
+  min_ansible_version: 2.8
 
   platforms:
     - name: EL
