--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,7 @@
 ---
-- hosts: all
-  become: true
+- name: Example Playbook
+  hosts: all
   vars:
-    - dnsmasq_config: true
+    dnsmasq_config: true
   roles:
     - role: ansible-dnsmasq
-  tasks:
