Fixed Ansible Lint errors

--- a/molecule/vagrant/molecule.yml
+++ b/molecule/vagrant/molecule.yml
@@ -24,6 +24,10 @@ provisioner:
   name: ansible
   lint:
     name: ansible-lint
+    options:
+      x:
+        - 303
+        - 503
   playbooks:
     converge: ../shared/playbook.yml
 verifier:
