--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ install:
 script:
   - ansible --version
   - molecule test
+notifications:
+  webhooks: https://galaxy.ansible.com/api/v1/notifications/
