Fix /etc/resolv.conf not being configured
/etc/resolv.conf needs be updated when systemd-resolved is in use. It
was only being updated when /etc/resolv.conf was a symlink.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,6 +18,6 @@
   when: dnsmasq_config
 
 - include: systemd_resolved.yml
-  when: >
-    ansible_service_mgr == "systemd" and
-    dnsmasq_systemd_resolved_disable
+  when:
+    - ansible_service_mgr == "systemd"
+    - dnsmasq_systemd_resolved_disable
