--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,6 +4,8 @@ galaxy_info:
   description: Ansible role to install/configure DNSMasq
   license: MIT
   min_ansible_version: 2.8
+  role_name: ansible_dnsmasq
+  namespace: mrlesmithjr
 
   platforms:
     - name: EL
