--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ before_script:
     musl-dev libffi-dev openssl-dev openssh
   - docker info
   - python3 --version
+  - python3 -m venv venv
+  - source venv/bin/activate
   - pip3 install --upgrade pip pip-tools
   - pip-sync requirements.txt requirements-dev.txt
   - ansible --version
