--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,9 @@ env:
   - molecule_distro=ubuntu1804
   - molecule_distro=ubuntu2004
 install:
-  - pip3 install --upgrade pip pip-tools
-  - pip-sync requirements.txt requirements-dev.txt
-  - ansible --version
-  - molecule --version
+- python -m pip install --upgrade pip
+- pip install -r requirements.txt -r requirements-dev.txt
+- pip install pre-commit
 script:
   - molecule test --scenario-name "$molecule_distro"
 notifications:
