--- a/molecule/shared/converge.yml
+++ b/molecule/shared/converge.yml
@@ -1,6 +1,8 @@
 ---
 - name: Converge
   hosts: all
+  vars:
+    dnsmasq_systemd_resolved_disable: false
   tasks:
     - name: Include ansible-dnsmasq
       include_role:
