--- a/tasks/systemd_resolved.yml
+++ b/tasks/systemd_resolved.yml
@@ -1,12 +1,12 @@
 ---
 - name: systemd_resolved | Checking If systemd-resolved Service Is Present # noqa command-instead-of-module
-  command: systemctl status systemd-resolved.service
+  ansible.builtin.command: systemctl status systemd-resolved.service
   register: _dnsmasq_systemd_resolved_check
   changed_when: false
   failed_when: false
 
 - name: systemd_resolved | Disabling and Stopping systemd-resolved
-  service:
+  ansible.builtin.service:
     name: systemd-resolved
     state: stopped
     enabled: false
@@ -17,12 +17,12 @@
   when: _dnsmasq_systemd_resolved_check['rc'] == 0
 
 - name: systemd_resolved | Checking If /etc/resolv.conf Exists
-  stat:
+  ansible.builtin.stat:
     path: /etc/resolv.conf
   register: _dnsmasq_resolv_conf
 
 - name: systemd_resolved | Removing Existing /etc/resolv.conf If symlink # noqa no-handler
-  file:
+  ansible.builtin.file:
     path: /etc/resolv.conf
     state: absent
   become: true
@@ -32,7 +32,7 @@
     - _dnsmasq_resolv_conf['stat']['islnk']
 
 - name: systemd_resolved | Creating /etc/resolv.conf
-  template:
+  ansible.builtin.template:
     src: etc/resolv.conf.j2
     dest: /etc/resolv.conf
     owner: root
