--- a/.github/workflows/release-galaxy.yml
+++ b/.github/workflows/release-galaxy.yml
@@ -3,26 +3,24 @@ name: Ansible Galaxy
 on:
   push:
     branches:
-    - main
-    - master
-    - 'releases/**'
-    tags:
-    - '*'
-  pull_request:
-    branches:
-    - main
-    - master
-    - 'releases/**'
+      - main
+      - master
+  release:
+    types:
+      - published
 
 jobs:
   galaxy:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.9]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - uses: actions/cache@v2
