--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,39 +3,23 @@ galaxy_info:
   author: Larry Smith Jr.
   description: Ansible role to install/configure DNSMasq
   license: MIT
-  min_ansible_version: 2.8
+  min_ansible_version: "2.8"
   role_name: ansible_dnsmasq
   namespace: mrlesmithjr
 
   platforms:
     - name: EL
       versions:
-        - 6
-        - 7
+        - all
     - name: Fedora
       versions:
-        - 22
-        - 23
-        - 24
-        - 25
-        - 26
-        - 27
-        - 28
-        - 29
+        - all
     - name: Ubuntu
       versions:
-        - bionic
-        - precise
-        - trusty
-        - vivid
-        - wily
-        - xenial
+        - all
     - name: Debian
       versions:
-        - jessie
-        - stretch
-        - wheezy
-
+        - all
   galaxy_tags:
     - networking
     - system
