--- a/molecule/centos7/molecule.yml
+++ b/molecule/centos7/molecule.yml
@@ -12,14 +12,16 @@ lint: |
   flake8
 platforms:
   - name: centos7
-    image: jrei/systemd-centos:7
+    image: mrlesmithjr/centos:7
     privileged: true
     command: /usr/sbin/init
     # tmpfs:
     #   - /run
     #   - /tmp
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
+    # groups: []
 provisioner:
   name: ansible
   playbooks:
