--- a/molecule/debian10/molecule.yml
+++ b/molecule/debian10/molecule.yml
@@ -12,14 +12,16 @@ lint: |
   flake8
 platforms:
   - name: debian10
-    image: jrei/systemd-debian:10
+    image: mrlesmithjr/debian:10
     privileged: true
     command: /lib/systemd/systemd
     # tmpfs:
     #   - /run
     #   - /tmp
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
+    # groups: []
 provisioner:
   name: ansible
   playbooks:
