--- a/molecule/shared/prepare.yml
+++ b/molecule/shared/prepare.yml
@@ -1,8 +1,9 @@
 ---
 - hosts: all
+  name: Prepare hosts
   tasks:
     - name: Update Apt Cache
-      apt:
+      ansible.builtin.apt:
         update_cache: true
       become: true
       when: ansible_os_family == "Debian"
