--- a/molecule/ubuntu2004/molecule.yml
+++ b/molecule/ubuntu2004/molecule.yml
@@ -12,14 +12,16 @@ lint: |
   flake8
 platforms:
   - name: ubuntu2004
-    image: jrei/systemd-ubuntu:20.04
+    image: mrlesmithjr/ubuntu:20.04
     privileged: true
     command: /lib/systemd/systemd
     # tmpfs:
     #   - /run
     #   - /tmp
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
+    # groups: []
 provisioner:
   name: ansible
   playbooks:
