Adding remote_tmp var for Molecule
- Trying to fix issue with ansible.cfg

--- a/molecule/centos7/molecule.yml
+++ b/molecule/centos7/molecule.yml
@@ -24,6 +24,9 @@ platforms:
     # groups: []
 provisioner:
   name: ansible
+  config_options:
+    defaults:
+      remote_tmp: /tmp
   playbooks:
     converge: ../shared/converge.yml
     prepare: ../shared/prepare.yml
