--- a/molecule/ubuntu1804/molecule.yml
+++ b/molecule/ubuntu1804/molecule.yml
@@ -24,6 +24,9 @@ platforms:
     # groups: []
 provisioner:
   name: ansible
+  config_options:
+    defaults:
+      remote_tmp: /tmp
   playbooks:
     converge: ../shared/converge.yml
     prepare: ../shared/prepare.yml
